--- a/nginx.conf
+++ b/nginx.conf
@@ -126,8 +126,15 @@ http {
                 add_header Content-Length 0;
                 return 204;
             }
-
-
+        }
+        # 添加 WebSocket 代理配置
+        location /chat/ {
+            proxy_pass http://localhost:8080; # 代理到后端 WebSocket 服务器（8080 端口）
+            proxy_http_version 1.1;           # 使用 HTTP/1.1 协议
+            proxy_set_header Upgrade $http_upgrade;        # 设置 Upgrade 头
+            proxy_set_header Connection "Upgrade";         # 设置 Connection 头
+            proxy_set_header Host $host;                   # 传递 Host 头
+            proxy_read_timeout 60s;                        # 超时时间，WebSocket 需要较长的连接时间
         }
     }
 
